<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        tools:context=".LandingFragment">

        <TextView
            android:id="@+id/deviceStatusText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_status_disconnected"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/batteryValueText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/battery_level_unknown"
            android:textSize="@dimen/text_size_med"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/deviceStatusText" />

        <TextView
            android:id="@+id/detectedGestureText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_margin_small"
            android:padding="@dimen/default_margin_small"
            android:text="@string/detected_gesture"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintBottom_toTopOf="@id/detectedGestureVerdictText"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/batteryValueText" />

        <!--<TextView
                android:id="@+id/detectedGestureVerdictText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_margin_small"
                android:text="@string/gesture_none"
                android:textSize="@dimen/text_size_large"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintLeft_toRightOf="@id/detectedGestureText"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/lockState"
                app:layout_constraintTop_toTopOf="@+id/detectedGestureText"/>-->
        <TextView
                android:id="@+id/detectedGestureVerdictText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_margin_small"
                android:text="@string/gesture_none"
                android:textSize="@dimen/text_size_large"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/lockState"
                app:layout_constraintTop_toBottomOf="@+id/detectedGestureText"/>

        <TextView
            android:id="@+id/lockState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_margin_small"
            android:padding="@dimen/default_margin_small"
            android:text="@string/lock_state"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintBottom_toTopOf="@id/eulerTitle"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/lockStateText"
            app:layout_constraintStart_toStartOf="@id/detectedGestureText"
            app:layout_constraintTop_toBottomOf="@id/detectedGestureText" />

        <TextView
            android:id="@+id/lockStateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_margin_small"
            android:text="@string/lock_state_unknown"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintBottom_toBottomOf="@id/lockState"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toRightOf="@id/lockState"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toEndOf="@id/lockState"
            app:layout_constraintTop_toTopOf="@id/lockState" />

        <TextView
                android:id="@+id/eulerTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_margin_small"
                android:text="@string/eulerTitle"
                android:textSize="@dimen/text_size_large"
                app:layout_constraintTop_toBottomOf="@+id/lockState"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                tools:layout_editor_absoluteY="342dp"/>
        <TextView
                android:id="@+id/pitchText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pitch"
                android:textSize="@dimen/text_size_med"
                app:layout_constraintBottom_toTopOf="@id/rollText"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/pitchValueText"
                app:layout_constraintTop_toBottomOf="@id/eulerTitle"/>

        <TextView
            android:id="@+id/pitchValueText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/euler_empty"
            android:textSize="@dimen/text_size_med"
            app:layout_constraintBottom_toBottomOf="@id/pitchText"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toRightOf="@id/pitchText"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="@id/rollValueText"
            app:layout_constraintTop_toTopOf="@id/pitchText" />

        <TextView
            android:id="@+id/rollText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_margin_small"
            android:text="@string/roll"
            android:textSize="@dimen/text_size_med"

            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/rollValueText"
            app:layout_constraintStart_toStartOf="@id/pitchText"
            app:layout_constraintTop_toBottomOf="@id/pitchText" />

        <TextView
            android:id="@+id/rollValueText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/euler_empty"
            android:textSize="@dimen/text_size_med"
            app:layout_constraintBottom_toBottomOf="@id/rollText"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toRightOf="@id/rollText"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/rollText" />

        <TextView
            android:id="@+id/yawText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_margin_small"
            android:text="@string/yaw"
            android:textSize="@dimen/text_size_med"

            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/yawValueText"
            app:layout_constraintStart_toStartOf="@id/pitchText"
            app:layout_constraintTop_toBottomOf="@id/rollText" />

        <TextView
            android:id="@+id/yawValueText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/euler_empty"
            android:textSize="@dimen/text_size_med"
            app:layout_constraintBottom_toBottomOf="@id/yawText"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toRightOf="@id/yawText"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/yawText" />

        <Button
            android:id="@+id/hapticsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/haptics"
            app:layout_constraintTop_toBottomOf="@id/yawText"
            app:layout_constraintBottom_toTopOf="@id/errorText"
            android:layout_margin="@dimen/default_margin_small"
            />
        <TextView
            android:id="@+id/errorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/text_size_med"
            android:textColor="#F00"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/yawValueText"
            tools:text="Error Message" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
